# pyCRLD

./: README.md  analysis_risk_reward.ipynb  index.html  pyproject.toml  search.json  sitemap.xml  stan.ipynb
Agents/: abase.html  abasej.html  apobase.html  apobasej.html  apostrategyactorcritic.html  apostrategyactorcriticj.html  apostrategybase.html  apostrategybasej.html  astrategyactorcritic.html  astrategyactorcriticj.html  astrategybase.html  astrategybasej.html  astrategysarsa.html  astrategysarsaj.html  avaluebase.html  avaluebasej.html  avaluesarsa.html  avaluesarsaj.html
Environments/: 101_EnvSocialDilemmaAsym.html  101_EnvSocialDilemmaAsymJ.html  envbase.html  envbasej.html  envecologicalpublicgood.html  envecologicalpublicgoodj.html  envhistoryembedding.html  envrenewableressources.html  envrenewableressourcesj.html  envriskreward.html  envsocialdilemma.html  envsocialdilemmaj.html  envuncertainsocialdilemma.html
Utils/: uflowplot.html  uhelpers.html  uhelpersj.html
nbs/: index.ipynb
nbs/Agents/: 01_AStrategyActorCriticJ.ipynb  02_AStrategySARSAJ.ipynb  04_APOStrategyActorCriticJ.ipynb  05_AValueSARSA.ipynb  05_AValueSARSAJ.ipynb  10_AStrategyBaseJ.ipynb  10_AValueBase.ipynb  10_AValueBaseJ.ipynb  11_APOStrategyBaseJ.ipynb  98_APOBaseJ.ipynb  99_ABase.ipynb  99_ABaseJ.ipynb
nbs/Environments/: 00_EnvBaseJ.ipynb  01_EnvHistoryEmbedding.ipynb  101_EnvSocialDilemmaAsym.ipynb  101_EnvSocialDilemmaAsymJ.ipynb  101_EnvSocialDilemmaJ.ipynb  10_EnvSocialDilemmaJ.ipynb  11_EnvEcologicalPublicGoodJ.ipynb  (+3 more)
pyCRLD/: _modidx.py
test/: pyvenv.cfg
(+36 files in other folders)
